--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css"  media="screen,projection"/ />
     <!--Let browser know website is optimized for mobile-->
+    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <title>MemoPad : React Sample Project</title>
