--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
 
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"> -->
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css"> -->
 
 
-    <title>MemoPad : React Sample Project</title>
+    <title>Team Space</title>
     <meta name="Description" content="Memo App implemented using React.js / MongoDB / Express.js">
     <meta name="Keywords" content="React.js, velopert, Memopad">
 
